Version: $Id$ $Name$

purple (12/14/05)
-----------------
+ Split a lot of charProfileStruct out into playerProfileStruct
+ Added opcode OP_Shroud for when someone shrouds when you're in the zone
	or you shroud yourself
+ Added a SpawnShell handler for OP_Shroud so that it properly see 
	all the spawn changes when a spawn shrouds for both you shrouding
	and others shrouding
+ Added an ItemDB handler for OP_Shroud so that it properly sees items
	that come across when you shroud yourself
+ Fixed timestamps on the terminal to show up when you don't have
	a preference set for the timestamp format

purple (12/08/05)
-----------------
+ Updated version to 5.2.4.0
+ Regenerated races from dbstr_us.txt (thanks ksmith and uRit1u2CBBa)
+ Cleaned up zone opcodes a bit more 

purple (12/07/05)
------------------
+ Updated version to 5.2.3.0
+ Beefed up configure checks for qt so people don't get qt4 when they
	upgrade to the latest version
+ Redid most world opcodes, zone opcodes
+ Updated structs for 12/7 live

purple (10/29/05)
------------------
+ Updated version to 5.2.2.0
+ Fixed guild member list parsing so include a new unknown flag (possibly 
	will be prospective flag?)
+ Found gm flag in spawnStruct

purple (10/27/05)
-------------------
+ Updated version to 5.2.1.0
+ Fixed all opcodes for patch on 10/27 (thanks ieatacid for help)
+ Redid spawnStruct for patch, added showhelm flag
+ Added 8 bytes to the end of charProfileStruct, including showhelm flag

purple (10/05/05)
-------------------
+ Updated version 5.2.0.0
+ Fixed item links in the terminal and message window so they match correctly
	based on the new item link format (thanks to ksmith and EQItems for
	all their great open info about items in EQ and being very on the ball
	with the last patch)
+ New races from .exe
+ Allow world logging from the commandline
+ Sanity check the max length specified in SessionRequest/Response so that
	we don't malloc huge amounts for packets.